@@ -23,5 +23,7 @@
     <dependency>profile-Products.DataGridField:default</dependency>
     <dependency>profile-Products.PasswordStrength:default</dependency>
     <dependency>profile-Products.cron4plone:default</dependency>
+    <dependency>profile-plone.app.caching:default</dependency>
+    <dependency>profile-plone.app.caching:without-caching-proxy</dependency>
   </dependencies>
 </metadata>
